fixed sticky position and spacing

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -15,8 +15,9 @@
 .icon-button-container {
   height: 100%;
   position: sticky;
-  top: 100px;
-  margin-top: 20px;
+  top: 130px;
+  margin-top: 8px;
+  gap: 16px;
 
   .icon-button {
     height: 100%;
